--- a/src/EventShare.Web/Views/Event/Details.cshtml
+++ b/src/EventShare.Web/Views/Event/Details.cshtml
@@ -38,7 +38,13 @@
             Rating
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LikersCount) likes
+            @if(Model.Publisher != null) {
+                @Html.DisplayFor(model => model.Publisher.FullName)
+            }
+            else
+            {
+                <div>External</div>
+            }
         </dd>
     </dl>
 </div>
